--- a/app/src/main/res/layout/fragment_card_content.xml
+++ b/app/src/main/res/layout/fragment_card_content.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.mahmoud.mohammed.materia_ldesign_nd.CardContentFragment">
+    tools:context="com.mahmoud.mohammed.materia_ldesign_nd.ui.CardContentFragment">
 
     <!-- TODO: Update blank fragment layout -->
 </FrameLayout>
