feat: implement favorites

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -43,6 +43,14 @@
 
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/favor"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_like_outline"
+        app:layout_anchor="@id/appbar"
+        app:layout_anchorGravity="bottom|right" />
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
